styles/styles.scss
/* ... */
.footer {
  .tk-help {
    position: relative;
    font-size: $body-font-size;

    .tk-help-links {
      position: absolute;
      bottom: 0;
      padding-bottom: 0.75rem;

      p {
        display: block;
        margin-top: 1rem;
      }

      .icon {
        margin-left: 0.5rem;

        svg {
          height: 2rem;
          width: 2rem;
        }
      }
    }
  }

  .tk-footer-libs {
    font-size: 1rem;
    font-weight: 400;

    a:hover {
      color: $magenta;
    }
  }

  .tk-footer-libs,
  .tk-footer-libs a,
  .tk-sponsored,
  .tk-sponsored a {
    color: white;
  }

  .tk-lib-name {
    font-weight: 600;
  }

  .tk-sponsored {
    margin-top: 2rem;
  }
}

.tk-help-links {
  .icon {
    svg {
      transform: translateY(30%);
    }
  }
}

.tk-doc-footer {
  margin-top: 1.5rem;
  padding-top: 1.5rem;
  border-top: 1px solid $light-gray;

  .tk-next,
  .tk-prev {
    font-size: 0.9rem;

    a {
      font-weight: 500;
    }

    .tk-arrow {
      display: inline-block;
      width: 1.4rem;
      height: 1.4rem;
      vertical-align: 0%;
    }
  }

  .tk-help-links {
    font-size: 0.9rem;

    .icon {
      margin-left: 0.3rem;
      svg {
        width: 1.5rem;
        height: 1.5rem;
      }
    }
    .tk-svg-path {
      fill: black !important;
    }
  }

  .tk-edit-this-page {
    font-size: 0.9rem;
  }
}

/*
 *
 * Syntax highlighting
 *
 */

/*
Docco style used in http://jashkenas.github.com/docco/ converted by Simon Madine (@thingsinjars)
*/

// .hljs {
//   display: block;
//   overflow-x: auto;
//   padding: 0.5em;
//   color: #000;
//   background: #f8f8ff;
// }

.hljs {
  display: block;
  overflow-x: scroll;
}

.hljs-comment,
.hljs-quote {
  color: $gray;
  font-style: italic;
}

.hljs-keyword,
.hljs-selector-tag,
.hljs-subst {
  color: $magenta;
}

// .hljs-literal {
//   color: $dark-gray;
//   font-weight: bold;
// }

.hljs-number {
  color: darken($green);
}

.hljs-string,
.hljs-doctag {
  color: darken($green);
}

.hljs-selector-id,
.hljs-selector-class,
.hljs-section,
.hljs-type {
  color: $blue;
}

.hljs-params {
  color: $purple;
}

.hljs-title {
  color: $purple;
  font-weight: bold;
}

.hljs-tag,
.hljs-name,
.hljs-attribute {
  color: darken($blue);
  font-weight: normal;
}

.hljs-variable,
.hljs-template-variable {
  color: darken($green);
}

.hljs-regexp,
.hljs-link {
  color: $green;
}

.hljs-symbol,
.hljs-bullet {
  color: $purple;
}

.hljs-built_in,
.hljs-builtin-name {
  color: darken($yellow);
}

.hljs-meta {
  color: $dark-gray;
  font-weight: bold;
}

.hljs-deletion {
  background: $red;
}

.hljs-addition {
  background: $green;
}

.hljs-emphasis {
  font-style: italic;
}

.hljs-strong {
  font-weight: bold;
}

.all-posts-link {
  margin: 0.5rem 0;
  font-size: 0.9rem;

  a {
    font-weight: 500;
    color: #c83895;
  }

  @include mobile {
    margin: 0 0.75rem;
  }
}

.blog-year-posts ul {
  margin-bottom: 2rem;
}

